compiler/testData/cli/jvm/jsr305DefaultMigration.out
compiler/testData/cli/jvm/jsr305DefaultMigration.kt:2:19: error: null can not be a value of a non-null type '@EnhancedNullability kotlin/String'
    annotated.foo(null)
                  ^
COMPILATION_ERROR
