compiler/testData/cli/jvm/jsr305DefaultMigration.kt
fun test(annotated: DefaultAnnotated) {
    annotated.foo(null)
}